# fastmcp-remote

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ROADMAP.md
docs/superpowers/plans/: 2026-05-31-fastmcp-remote.md
docs/superpowers/specs/: 2026-05-31-fastmcp-remote-design.md
src/remote_mcp/: __init__.py  __main__.py  cli.py  scaffold.py
src/remote_mcp/snippets/: tool.py.j2
src/remote_mcp/templates/: DEPLOYMENT.md.j2  Dockerfile.j2  README.md.j2  asgi.py  docker-compose.yml.j2  dockerignore  env.example.j2  fly.toml.j2  gitignore  mcp.json.j2  pylintrc  pyproject.toml.j2  render.yaml.j2  server.json.j2
src/remote_mcp/templates/github/workflows/: publish-mcp.yml
src/remote_mcp/templates/src/: app.py.j2  server.py.j2
src/remote_mcp/templates/src/config/: settings.py.j2
src/remote_mcp/templates/src/core/: app_state.py  auth.py  errors.py.j2  formatters.py.j2  handlers.py.j2  http_client.py  telemetry.py.j2
src/remote_mcp/templates/src/middleware/: __init__.py  auth.py.j2  telemetry.py  telemetry.py.j2
src/remote_mcp/templates/src/tools/: example.py
src/remote_mcp/templates/src/views/: __init__.py  health.py.j2  oauth.py  root.py  root.py.j2
src/remote_mcp/templates/templates/: index.html.j2
src/remote_mcp/templates/tests/: conftest.py  test_auth.py  test_middleware.py  test_telemetry.py
tests/: test_cli.py  test_e2e.py  test_scaffold.py
