[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remote-mcp"
version = "0.3.0"
description = "Scaffold a production-ready remote MCP (Model Context Protocol) server with OAuth, RFC 8414/9728 discovery, retry, telemetry, and tests — in one command. Zero runtime dependency on this package."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pushpendra Tripathi" }]
keywords = ["mcp", "fastmcp", "remote", "oauth", "scaffold", "cli", "model-context-protocol", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=14.0",
    "jinja2>=3.1",
]

[project.scripts]
remote-mcp = "remote_mcp.cli:app"

[project.urls]
Homepage = "https://github.com/pushpendra-tripathi/remote-mcp"
Repository = "https://github.com/pushpendra-tripathi/remote-mcp"
Issues = "https://github.com/pushpendra-tripathi/remote-mcp/issues"
Changelog = "https://github.com/pushpendra-tripathi/remote-mcp/blob/main/CHANGELOG.md"
Releases = "https://github.com/pushpendra-tripathi/remote-mcp/releases"
Documentation = "https://github.com/pushpendra-tripathi/remote-mcp#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-timeout>=2.3",
    "ruff>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/remote_mcp"]
artifacts = [
    "src/remote_mcp/templates/**",
    "src/remote_mcp/snippets/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/remote_mcp/**",
    "tests/**",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]  # B008: Typer uses function defaults by design

[tool.ruff.lint.per-file-ignores]
"src/remote_mcp/templates/**" = ["F", "E", "W", "I", "UP", "B", "SIM", "RUF"]
